Improved jlink config